--- a/index.html
+++ b/index.html
@@ -1,17 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i|Nunito:300,300i" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+    <link rel="shortcut icon" type="img/png" href="img/favicon.png">
     <title>Real Estate Sass Website</title>
 </head>
+
 <body>
     <div class="container">
-        
+        <div class="sidebar">
+            Sidebar
+        </div>
+        <header class="header">
+            Header
+        </header>
+        <div class="realtors">
+            Top 3 realtors
+        </div>
+        <div class="features">
+            <div class="feature">
+                <svg class="feature__icon">
+                    <use xlink:href="img/sprite.svg#icon-global"></use>
+                </svg>
+                <h4 class="heading-4 heading-4--dark">Worlds best luxury homes</h4>
+                <p class="feature__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, beatae?
+                </p>
+            </div>
+            <div class="feature">
+                <svg class="feature__icon">
+                    <use xlink:href="img/sprite.svg#icon-trophy"></use>
+                </svg>
+                <h4 class="heading-4 heading-4--dark">Only the best properties</h4>
+                <p class="feature__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia quam labore animi. Non, optio officia? In fugiat quod odio quam qui tempore provident totam quis!</p>
+            </div>
+            <div class="feature">
+                <svg class="feature__icon">
+                    <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+                </svg>
+                <h4 class="heading-4 heading-4--dark">All homes in top locations</h4>
+                <p class="feature__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae possimus temporibus aut hic recusandae eligendi eaque, reprehenderit ut omnis suscipit consectetur molestiae? Ex dolore inventore illum tenetur, dolorem consectetur maiores!</p>
+            </div>
+            <div class="feature">
+                <svg class="feature__icon">
+                    <use xlink:href="img/sprite.svg#icon-key"></use>
+                </svg>
+                <h4 class="heading-4 heading-4--dark">New homes in one week</h4>
+                <p class="feature__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, beatae?</p>
+            </div>
+            <div class="feature">
+                <svg class="feature__icon">
+                    <use xlink:href="img/sprite.svg#icon-presentation"></use>
+                </svg>
+                <h4 class="heading-4 heading-4--dark">Top 1% realtors</h4>
+                <p class="feature__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero fugit repellendus totam aliquid doloremque. Nulla.</p>
+            </div><div class="feature">
+                <svg class="feature__icon">
+                    <use xlink:href="img/sprite.svg#icon-lock"></use>
+                </svg>
+                <h4 class="heading-4 heading-4--dark">Secure payments on nexter</h4>
+                <p class="feature__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt vel, corrupti doloremque minima rerum repellendus dolor quam harum repellat, nam facere dolorum ab nemo consequatur, animi debitis atque. Architecto, est.</p>
+            </div>
+        </div>
+        <div class="story story__pictures">
+            Story
+        </div>
+        <div class="story story__content">
+            Story 2
+        </div>
+        <div class="homes">
+            Home
+        </div>
+        <div class="gallery">
+            Gallery
+        </div>
+        <div class="footer">
+            Footer
+        </div>
     </div>
 </body>
+
 </html>
