Done with story section

--- a/index.html
+++ b/index.html
@@ -66,12 +66,18 @@
                 <p class="feature__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt vel, corrupti doloremque minima rerum repellendus dolor quam harum repellat, nam facere dolorum ab nemo consequatur, animi debitis atque. Architecto, est.</p>
             </div>
         </div>
+        
         <div class="story story__pictures">
-            Story
+            <img src="img/story-1.jpeg" class="story__img--1" alt="image">
+            <img src="img/story-2.jpeg" class="story__img--2" alt="image">            
         </div>
-        <div class="story story__content">
-            Story 2
+        <div class="story story__content">    
+            <h3 class="heading-3 mb-sm">Happy Customers</h3>
+            <h2 class="heading-2 heading-2--dark mb-md">&ldquo; The best decision of our lives &rdquo;</h2>
+            <p class="story__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium quas fuga officia nemo, cumque vel magni quasi tempora maiores.</p>
+            <button class="btn">Find your home</button>
         </div>
+
         <div class="homes">
             Home
         </div>
