Done with card home section

--- a/index.html
+++ b/index.html
@@ -16,12 +16,16 @@
         <div class="sidebar">
             Sidebar
         </div>
+
+
         <header class="header">
             Header
         </header>
         <div class="realtors">
             Top 3 realtors
         </div>
+
+
         <div class="features">
             <div class="feature">
                 <svg class="feature__icon">
@@ -36,14 +40,17 @@
                     <use xlink:href="img/sprite.svg#icon-trophy"></use>
                 </svg>
                 <h4 class="heading-4 heading-4--dark">Only the best properties</h4>
-                <p class="feature__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia quam labore animi. Non, optio officia? In fugiat quod odio quam qui tempore provident totam quis!</p>
+                <p class="feature__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia quam labore
+                    animi. Non, optio officia? In fugiat quod odio quam qui tempore provident totam quis!</p>
             </div>
             <div class="feature">
                 <svg class="feature__icon">
                     <use xlink:href="img/sprite.svg#icon-map-pin"></use>
                 </svg>
                 <h4 class="heading-4 heading-4--dark">All homes in top locations</h4>
-                <p class="feature__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae possimus temporibus aut hic recusandae eligendi eaque, reprehenderit ut omnis suscipit consectetur molestiae? Ex dolore inventore illum tenetur, dolorem consectetur maiores!</p>
+                <p class="feature__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae possimus
+                    temporibus aut hic recusandae eligendi eaque, reprehenderit ut omnis suscipit consectetur molestiae?
+                    Ex dolore inventore illum tenetur, dolorem consectetur maiores!</p>
             </div>
             <div class="feature">
                 <svg class="feature__icon">
@@ -57,33 +64,241 @@
                     <use xlink:href="img/sprite.svg#icon-presentation"></use>
                 </svg>
                 <h4 class="heading-4 heading-4--dark">Top 1% realtors</h4>
-                <p class="feature__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero fugit repellendus totam aliquid doloremque. Nulla.</p>
-            </div><div class="feature">
+                <p class="feature__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero fugit
+                    repellendus totam aliquid doloremque. Nulla.</p>
+            </div>
+            <div class="feature">
                 <svg class="feature__icon">
                     <use xlink:href="img/sprite.svg#icon-lock"></use>
                 </svg>
                 <h4 class="heading-4 heading-4--dark">Secure payments on nexter</h4>
-                <p class="feature__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt vel, corrupti doloremque minima rerum repellendus dolor quam harum repellat, nam facere dolorum ab nemo consequatur, animi debitis atque. Architecto, est.</p>
+                <p class="feature__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt vel, corrupti
+                    doloremque minima rerum repellendus dolor quam harum repellat, nam facere dolorum ab nemo
+                    consequatur, animi debitis atque. Architecto, est.</p>
             </div>
         </div>
-        
+
+
         <div class="story story__pictures">
             <img src="img/story-1.jpeg" class="story__img--1" alt="image">
-            <img src="img/story-2.jpeg" class="story__img--2" alt="image">            
+            <img src="img/story-2.jpeg" class="story__img--2" alt="image">
         </div>
-        <div class="story story__content">    
+        <div class="story story__content">
             <h3 class="heading-3 mb-sm">Happy Customers</h3>
             <h2 class="heading-2 heading-2--dark mb-md">&ldquo; The best decision of our lives &rdquo;</h2>
-            <p class="story__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium quas fuga officia nemo, cumque vel magni quasi tempora maiores.</p>
+            <p class="story__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium quas fuga
+                officia nemo, cumque vel magni quasi tempora maiores.</p>
             <button class="btn">Find your home</button>
         </div>
 
+
         <div class="homes">
-            Home
+            <div class="home">
+                <img src="img/house-1.jpeg" alt="house" class="home__img">
+                <svg class="home__like">
+                    <use xlink:href="img/sprite.svg#icon-heart-full"></use>
+                </svg>
+                <h5 class="home__name">Beautiful family home</h5>
+                <div class="home__location">
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+                    </svg>
+                    <p>USA</p>
+                </div>
+                <div class="home__rooms">
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-profile-male"></use>
+                    </svg>
+                    <p>5 rooms</p>
+                </div>
+                <div class="home__area">
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-expand"></use>
+                    </svg>
+                    <p>325 m<sup>2</sup></p>
+                </div>
+                <div class="home__price">
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-key"></use>
+                    </svg>
+                    <p>$1,233,000</p>
+                </div>
+                <button class="btn home__btn">Contact Realtor</button>
+            </div>
+
+            <div class="home">
+                <img src="img/house-2.jpeg" alt="house" class="home__img"/>
+                <svg class="home__like">
+                    <use xlink:href="img/sprite.svg#icon-heart-full"></use>
+                </svg>
+                <h5 class="home__name">Mordern GLass House</h5>
+                <div class="home__location">
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+                    </svg>
+                    <p>Canada</p>
+                </div>
+                <div class="home__rooms">
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-profile-male"></use>
+                    </svg>
+                    <p>6 rooms</p>
+                </div>
+                <div class="home__area">
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-expand"></use>
+                    </svg>
+                    <p>425 m<sup>2</sup></p>
+                </div>
+                <div class="home__price">
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-key"></use>
+                    </svg>
+                    <p>$2,233,000</p>
+                </div>
+                <button class="btn home__btn">Contact Realtor</button>
+            </div>
+
+            <div class="home">
+                <img src="img/house-3.jpeg" alt="house" class="home__img">
+                <svg class="home__like">
+                    <use xlink:href="img/sprite.svg#icon-heart-full"></use>
+                </svg>
+                <h5 class="home__name">Cozy African family home</h5>
+                <div class="home__location">
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+                    </svg>
+                    <p>UK</p>
+                </div>
+                <div class="home__rooms">
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-profile-male"></use>
+                    </svg>
+                    <p>3 rooms</p>
+                </div>
+                <div class="home__area">
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-expand"></use>
+                    </svg>
+                    <p>225 m<sup>2</sup></p>
+                </div>
+                <div class="home__price">
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-key"></use>
+                    </svg>
+                    <p>$933,000</p>
+                </div>
+                <button class="btn home__btn">Contact Realtor</button>
+            </div>
+
+            <div class="home">
+                <img src="img/house-4.jpeg" alt="house" class="home__img">
+                <svg class="home__like">
+                    <use xlink:href="img/sprite.svg#icon-heart-full"></use>
+                </svg>
+                <h5 class="home__name">Extraodinary Single home</h5>
+                <div class="home__location">
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+                    </svg>
+                    <p>Germany</p>
+                </div>
+                <div class="home__rooms">
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-profile-male"></use>
+                    </svg>
+                    <p>6 rooms</p>
+                </div>
+                <div class="home__area">
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-expand"></use>
+                    </svg>
+                    <p>225 m<sup>2</sup></p>
+                </div>
+                <div class="home__price">
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-key"></use>
+                    </svg>
+                    <p>$1,433,000</p>
+                </div>
+                <button class="btn home__btn">Contact Realtor</button>
+            </div>
+
+            <div class="home">
+                <img src="img/house-5.jpeg" alt="house" class="home__img">
+                <svg class="home__like">
+                    <use xlink:href="img/sprite.svg#icon-heart-full"></use>
+                </svg>
+                <h5 class="home__name">Mordern Cottage home</h5>
+                <div class="home__location">
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+                    </svg>
+                    <p>Spain</p>
+                </div>
+                <div class="home__rooms">
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-profile-male"></use>
+                    </svg>
+                    <p>2 rooms</p>
+                </div>
+                <div class="home__area">
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-expand"></use>
+                    </svg>
+                    <p>125 m<sup>2</sup></p>
+                </div>
+                <div class="home__price">
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-key"></use>
+                    </svg>
+                    <p>$333,000</p>
+                </div>
+                <button class="btn home__btn">Contact Realtor</button>
+            </div>
+
+            <div class="home">
+                <img src="img/house-6.jpeg" alt="house" class="home__img">
+                <svg class="home__like">
+                    <use xlink:href="img/sprite.svg#icon-heart-full"></use>
+                </svg>
+                <h5 class="home__name">Magnificent Winter home</h5>
+                <div class="home__location">
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+                    </svg>
+                    <p>Norway</p>
+                </div>
+                <div class="home__rooms">
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-profile-male"></use>
+                    </svg>
+                    <p>4 rooms</p>
+                </div>
+                <div class="home__area">
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-expand"></use>
+                    </svg>
+                    <p>425 m<sup>2</sup></p>
+                </div>
+                <div class="home__price">
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-key"></use>
+                    </svg>
+                    <p>$1,833,000</p>
+                </div>
+                <button class="btn home__btn">Contact Realtor</button>
+            </div>
+
         </div>
+
+
         <div class="gallery">
             Gallery
         </div>
+
+
         <div class="footer">
             Footer
         </div>
