Done with footer

--- a/index.html
+++ b/index.html
@@ -341,7 +341,28 @@
 
 
         <div class="footer">
-            Footer
+            <ul class="nav">
+                <li class="nav__item">
+                    <a href="" class="nav__link">Find your ideal home</a>
+                <li class="nav__item">
+                    <a href="" class="nav__link">Request proposal</a>
+                </li>
+                </li>
+                <li class="nav__item">
+                    <a href="" class="nav__link">DOwnload the home planner</a>
+                </li>
+                <li class="nav__item">
+                    <a href="" class="nav__link">Submit your property</a>
+                </li>
+                <li class="nav__item">
+                    <a href="" class="nav__link">Come work with us.</a>
+                </li>
+                <li class="nav__item">
+                    <a href="" class="nav__link">Come work with us</a>
+                </li>
+            </ul>
+            <p class="copyright">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium reiciendis enim quidem iure cumque facilis, </p>
+            <p class="copyright">&copy; 2019 by Jonas Course</p>
         </div>
     </div>
 </body>
